# nionswift-video-capture

./: .travis.yml  CHANGES.rst  VideoCapture.py  VideoCaptureOperations.py  __init__.py  meta.yaml  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
nionswift_plugin/nionswift_video_capture/: VideoCapture.py
nionswift_plugin/nionswift_video_capture/test/: VideoCapture_test.py
