[metadata]
name = nionswift-video-capture
version = 0.1.0
author = Nion Software
author_email = swift@nion.com
description = Capture video from built-in camera using OpenCV.
long_description = file: README.rst, CHANGES.rst, LICENSE
url = https://github.com/nion-software/nionswift-hyperspy
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.7
install_requires =
    nionswift-instrumentation
    nionswift

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.nionswift_video_capture
